# turboQuantDC

./: .gitignore  HANDOFF.md  MANIFEST.in  OVERNIGHT_PLAN.md  README.md  autoresearch.py  autoresearch_dashboard.py  autoresearch_real.py  benchmark.py  benchmark_speed.py  demo_gemma4.py  index.html  pyproject.toml  requirements.txt  run_70b.py  run_infinite_context.py  setup.py  test_retrieval_scale.py
benchmarks/: 32b_long_generation.py  attention_optimal_experiment.py  bit_sweep_generation.py  bit_sweep_generation_v2.py  block_rotation_benchmark.py  cache_distillation_benchmark.py  code_retrieval_experiment.py  delta_quant_experiment.py  entropy_coding_experiment.py  expected_attention_benchmark.py  faiss_retrieval_experiment.py  generation_quality.py  hard_tasks.py  head_to_head.py  learned_quant_benchmark.py  niah_for_tom.py  pca_code_retrieval_experiment.py  ppl_for_tom.py  residual_quant_experiment.py  retrieval_attention_experiment.py  score_norm_experiment.py  spectral_analysis.py  ultra_compress_benchmark.py  v2_benchmark.py  v2_long_context_benchmark.py
docs/: ASYMPTOTIC_LAW_REPORT.md  ATTENTION_FIX_PLAN.md  PATH_TO_100M.md  RESEARCH_LANDSCAPE.md  RESIDUALQUANT_LLAMA_CPP_SPEC.md  index.html
overnight_results/: README.md  phase1_7b.md  phase3_32b.md  phase4_70b.md  phase4_70b_lcpp_data.json  phase4_70b_llama_cpp.md  phase5_200b.md  pr45_comment_draft.md  run_14b.py  run_200b.py  run_phase1.py  run_phase3_32b.py  run_phase4_70b.py  run_phase4_70b_lcpp.py  speed_benchmark.md  stacked_compression_results.md
tests/: test_asymmetric.py  test_benchmark.py  test_block_rotation.py  test_channel_adaptive.py  test_chunked_prefill.py  test_custom_attention.py  test_expected_attention.py  test_fused_attention.py  test_generation_cache.py  test_hf_integration.py  test_hybrid_cache.py  test_learned_quant.py  test_residual_quant.py  test_run_70b.py  test_streaming_70b.py  test_token_eviction.py  test_triton_wht.py  test_ultra_streaming.py  test_weight_compression.py
tools/: export_residualquant_gguf.py  residualquant_reference.c  validate_c_vs_python.py
turboquantdc/: __init__.py  adaptive_bits.py  adaptive_generation_cache.py  adaptive_hf_cache.py  asymmetric.py  attention_optimal.py  block_rotation.py  cache_distillation.py  channel_adaptive.py  chunked_prefill.py  code_retrieval.py  (+48 more)
(+25 files in other folders)
