[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquantdc"
version = "0.3.0"
description = "TurboQuant: 3-bit KV cache compression for LLMs with <0.5% attention quality loss"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "TurboQuantDC Contributors" },
]
keywords = [
    "llm",
    "kv-cache",
    "quantization",
    "compression",
    "transformer",
    "attention",
    "cuda",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "scipy>=1.10.0,<1.15.0",
]

[project.optional-dependencies]
base = [
    "torch>=2.0.0",
    "scipy>=1.10.0,<1.15.0",
]
hf = [
    "transformers>=4.40.0",
    "accelerate>=0.25.0",
]
bnb = [
    "bitsandbytes>=0.43.0",
]
triton = [
    "triton>=3.0.0",
]
benchmark = [
    "datasets",
    "matplotlib",
    "tqdm",
]
all = [
    "torch>=2.0.0",
    "scipy>=1.10.0,<1.15.0",
    "transformers>=4.40.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.43.0",
    "triton>=3.0.0",
    "datasets",
    "matplotlib",
    "tqdm",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/turboquantdc/turboquantdc"
Repository = "https://github.com/turboquantdc/turboquantdc"
Issues = "https://github.com/turboquantdc/turboquantdc/issues"
Documentation = "https://github.com/turboquantdc/turboquantdc#readme"

[tool.setuptools.packages.find]
include = ["turboquantdc*"]
exclude = ["tests*", "benchmarks*", "reference*", "docs*", "warroom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = "."

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_defs = false
